--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@
     --radius: 0.5rem;
   }
 
-  .dark {
+  :root:has(main.dark) {
     --background: 222.2 84% 4.9%;
     --foreground: 210 40% 98%;
     --card: 222.2 84% 4.9%;
